--- a/storeys/templates/storeys/base.html
+++ b/storeys/templates/storeys/base.html
@@ -31,7 +31,7 @@
         };
     </script>
     {% block pre_require_js %}{% endblock %}
-    <script data-main="{% static 'common/main.js' %}" src="{% static 'storeys/lib/requirejs/require.js' %}"
+    <script data-main="{% static 'common/main.js' %}" src="{% static 'storeys/lib/require.js' %}"
             type="text/javascript" charset="utf-8">
     </script>
   </head>
