🔨 Fixed URL_ROOT to point to /.

--- a/storeys/templates/storeys/base.html
+++ b/storeys/templates/storeys/base.html
@@ -30,7 +30,7 @@
             settings: {
               ROOT_URLCONF: '{% static "urls.js" %}',
               STATIC_ROOT: '{% static "" %}',
-              URL_ROOT: ''
+              URL_ROOT: '/'
             }
           },
           packages: [
