☑︎ Passed thru the current url path as default_url from base template.

--- a/storeys/templates/storeys/base.html
+++ b/storeys/templates/storeys/base.html
@@ -30,7 +30,8 @@
             settings: {
               ROOT_URLCONF: '{% static "urls.js" %}',
               STATIC_ROOT: '{% static "" %}',
-              URL_ROOT: '/'
+              URL_ROOT: '/',
+              DEFAULT_URL: '{{ request.path }}'
             }
           },
           packages: [
