☑︎ Added hashes change support. Updated storeys version.

--- a/storeys/templates/storeys/base.html
+++ b/storeys/templates/storeys/base.html
@@ -29,6 +29,7 @@
             },
             settings: {
               ROOT_URLCONF: '{% static "urls.js" %}',
+              ROOT_HASHCONF: '{% static "hashes.js" %}',
               STATIC_ROOT: '{% static "" %}',
               URL_ROOT: '/',
               DEFAULT_URL: '{{ request.path }}'
