- 'non_exported_urlpatterns' functionality was added - unit tests were updated

--- a/templates/storeys_urls_js/included.html
+++ b/templates/storeys_urls_js/included.html
@@ -1,11 +1,11 @@
 define(
     ['storeys/conf/urls', 'storeys/contrib/auth/decorators'],
-    function(urls, decorators, views) {
-      var url = urls.url,
+    function re(urls, decorators, views) {
+      var url = urls.url;
 
       return [
           {% for url in urls %}
-              url({% for value in url %}{{ value|safe }}{% if not forloop.last %}, {% endif %}{% endfor %}){% endfor %}
+              url({% for value in url %}{{ value|safe }}{% if not forloop.last %}, {% endif %}{% endfor %}){% if not forloop.last %}, {% endif %}{% endfor %}
       ];
     }
 );
