--- a/templates/storeys_urls_js/main.html
+++ b/templates/storeys_urls_js/main.html
@@ -1,12 +1,12 @@
 define(
     ['storeys/conf/urls'],
-    function(urls) {
+    function re(urls) {
       var url = urls.url,
           include = urls.include;
 
       return [
           {% for url in urls %}
-              url({% for value in url %}{{ value|safe }}{% if not forloop.last %}, {% endif %}{% endfor %}){% endfor %}
+              url({% for value in url %}{{ value|safe }}{% if not forloop.last %}, {% endif %}{% endfor %}){% if not forloop.last %}, {% endif %}{% endfor %}
       ];
     }
 );
