- tests.py lilfix - 'StoreysView.as_view()' replaced by 'TemplateView.as_view()'

--- a/templates/storeys_urls_js/included.html
+++ b/templates/storeys_urls_js/included.html
@@ -1,8 +1,8 @@
 define(
     ['storeys/conf/urls', 'storeys/contrib/auth/decorators', 'storeys/views/generic/base'],
-    function(urls, decorators, views) {
+    function(urls, decorators, base) {
       var url = urls.url,
-          view = views.View;
+          TemplateView = base.TemplateView;
 
       return [
           {% for url in urls %}
