- tests for storeys' reverse were added - `collect_storeyjs_routes` renamed to `collectstatic_storeys` - `new TemplateView()` was added to templates - minor template fixes - tests fixes due to new functionality

--- a/templates/storeys_urls_js/included.html
+++ b/templates/storeys_urls_js/included.html
@@ -6,7 +6,8 @@ define(
 
       return [
           {% for url in urls %}
-              url({% for value in url %}{{ value|safe }}{% if not forloop.last %}, {% endif %}{% endfor %}){% if not forloop.last %}, {% endif %}{% endfor %}
+              url({% for value in url %}{{ value|safe }}{% if not forloop.last %}, {% endif %}{% endfor %}){% if not forloop.last %}, {% endif %}
+          {% endfor %}
       ];
     }
 );
