- tests for `url` templatetag

--- a/tests/tests/templates/main.html
+++ b/tests/tests/templates/main.html
@@ -1,5 +1,5 @@
 {% block header %}
-This is the url of current page:
+<h1>Storeys was successfully loaded {% url 'tests' %}</h1>
 {% endblock %}
 
 <section class="left">
@@ -8,6 +8,6 @@ This is the url of current page:
 
 <section class="right">
   {% block right %}
-  {% url 'tests' %}
+
   {% endblock %}
 </section>
